# backend-fractal

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  fixture-db.json  post-create.sh  pyproject.toml
api/: api.py  api_answer.py  api_auth.py  api_choice.py  api_correction.py  api_exam.py  api_participants.py  api_question.py  api_ranking.py  api_user.py  models.py  schemas.py  services.py
api/migrations/: 0001_initial.py  0002_exam.py  0003_question.py  0004_choice.py  0005_participant.py  0006_answer.py  0007_result.py
api/tests/: test_answer.py  test_auth.py  test_choice.py  test_correction.py  test_exam.py  test_participants.py  test_question.py  test_ranking.py  test_user.py
backend/: settings.py  urls.py
